Hackathon: fix judges on mobile

--- a/client/landing/site.hackathon/styl/home.styl
+++ b/client/landing/site.hackathon/styl/home.styl
@@ -410,6 +410,7 @@ body.home
           line-height     32px
           text-decoration none
           color           inherit
+          white-space     nowrap
 
         .details
           cite
@@ -420,6 +421,8 @@ body.home
             line-height   16px
           cite
             font-weight   bold
+            white-space   nowrap
+
       &.apis
         h4
           margin-bottom   22px
@@ -727,8 +730,8 @@ body.home
           margin-left     0
 
         .judge
-          width           100%
-          margin          0 0 32px
+          max-width       240px
+          margin          0 10px 32px 0
 
       aside.partners
         position          static
